src/test/ui/argument-suggestions/swapped_arguments.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/swapped_arguments.rs:8:3
   |
LL |   two_args(1.0, 1);
   |   ^^^^^^^^ ---  - expected `f32`, found `{integer}`
   |            |
   |            expected `i32`, found `{float}`
   |
note: function defined here
  --> $DIR/swapped_arguments.rs:3:4
   |
LL | fn two_args(_a: i32, _b: f32) {}
   |    ^^^^^^^^ -------  -------
help: swap these arguments
   |
LL |   two_args(1, 1.0);
   |           ~~~~~~~~

error[E0308]: arguments to this function are incorrect
  --> $DIR/swapped_arguments.rs:9:3
   |
LL |   three_args(1.0,   1,  "");
   |   ^^^^^^^^^^ ---    - expected `f32`, found `{integer}`
   |              |
   |              expected `i32`, found `{float}`
   |
note: function defined here
  --> $DIR/swapped_arguments.rs:4:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: swap these arguments
   |
LL |   three_args(1, 1.0, "");
   |             ~~~~~~~~~~~~

error[E0308]: arguments to this function are incorrect
  --> $DIR/swapped_arguments.rs:10:3
   |
LL |   three_args(  1,  "", 1.0);
   |   ^^^^^^^^^^       --  --- expected `&str`, found `{float}`
   |                    |
   |                    expected `f32`, found `&'static str`
   |
note: function defined here
  --> $DIR/swapped_arguments.rs:4:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: swap these arguments
   |
LL |   three_args(1, 1.0, "");
   |             ~~~~~~~~~~~~

error[E0308]: arguments to this function are incorrect
  --> $DIR/swapped_arguments.rs:11:3
   |
LL |   three_args( "", 1.0,   1);
   |   ^^^^^^^^^^  --         - expected `&str`, found `{integer}`
   |               |
   |               expected `i32`, found `&'static str`
   |
note: function defined here
  --> $DIR/swapped_arguments.rs:4:4
   |
LL | fn three_args(_a: i32, _b: f32, _c: &str) {}
   |    ^^^^^^^^^^ -------  -------  --------
help: swap these arguments
   |
LL |   three_args(1, 1.0, "");
   |             ~~~~~~~~~~~~

error[E0308]: arguments to this function are incorrect
  --> $DIR/swapped_arguments.rs:13:3
   |
LL |   four_args(1.0, 1, X {}, "");
   |   ^^^^^^^^^ ---  -  ----  -- expected `X`, found `&'static str`
   |             |    |  |
   |             |    |  expected `&str`, found `X`
   |             |    expected `f32`, found `{integer}`
   |             expected `i32`, found `{float}`
   |
note: function defined here
  --> $DIR/swapped_arguments.rs:5:4
   |
LL | fn four_args(_a: i32, _b: f32, _c: &str, _d: X) {}
   |    ^^^^^^^^^ -------  -------  --------  -----
help: did you mean
   |
LL |   four_args(1, 1.0, "", X {});
   |            ~~~~~~~~~~~~~~~~~~

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0308`.
